<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editAssignmentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/assignment_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/editAssignmentDateAndTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_and_time"
            android:inputType="datetime" />

        <EditText
            android:id="@+id/editTextAssignmentCourse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/professor"
            android:inputType="textPersonName" />



        <EditText
            android:id="@+id/editTextAssignmentLocationAndRoom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location_and_room_number"
            android:inputType="text" />

        <Button
            android:id="@+id/buttonSaveAssignment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/save_assignment" />

    </LinearLayout>
</ScrollView>